# audiconnectpy

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  MANIFEST.in  README.md  _secrets.yaml  audiconnectpy.code-workspace  example.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: auto-approve.yml  dependbot-auto-approve.yml  python-lint.yml  python-publish.yml  pythonpackage.yml  pythonpublish.yml  release.yml
audiconnectpy/: __init__.py  actions.py  api.py  auth.py  const.py  exceptions.py  helpers.py  model.py  models.py  mypy.ini  services.py  util.py  vehicle.py
tests/: __init__.py  conftest.py  test_connect.py  test_home.py  test_vehicles.py
tests/__snapshots__/: test_vehicles.ambr
tests/fixtures/: audi0.json  audi1.json  audi2.json  audi3.json  capabilities.json  get_vehicles.json  info_vehicles.json  location.json
